2001-03-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/expack.cc, files/utils.*: fixed expack switch_slashes problem
	* gumps/Paperdoll_gump_info.cc: corrected cloak shape numbers

2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Removed more 'paint()' calls in Usecode intrinsics to fix
	problem with disappearing faces in conversations.
	* In the File gump, the RETURN key does a 'save' if the action is
	unambiguous.

2001-03-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/Makefile.am: added SDL_INCLUDES to includes
	* schedule.cc: fixed crash in Sew_schedule

2001-03-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be: added exult_bg.flx to dependencies
	* gumps/Spellbook_gump.cc: fixed crash when enabling wizardmode when spellbook open

2001-03-26  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Crystal-ball space scene starting to work, except sometimes
	you can see the cat(!).
	* The Cantra-vs-Batlin scene in the crystal ball is also
	appearing, except (1) usually Batlin is being chased by Cantra,
	and (2) somebody ends up dying in the battle.

2001-03-25  Ryan Nunn <triforce@merlin.net.au>
	* Makefile.cygwin, Makefile.win32: Some changes for the tools. Also
	  fixed expack writing output to text files when using Makefile.cygwin.

2001-03-25  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Added 'camera_actor' to Game_window, and a usecode
	intrinsic that sets it.  Crystal ball is half-working (and then
	you're stuck in space!)

2001-03-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.cygwin: committed Travis' changes

2001-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Companions wait while you take the Test.  Grandfather clock
	animation fixed.  Books work.

2001-03-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/credits.txt: added Aurelien Marchand (Artaxerxes)
	* data/bg/: added subdir. with bg shapes
	* Makefile.*: build exult_bg.flx
	* tools/expack.cc: convert paths (unix->dos, unix->macos)
